<resources>
    <string name="app_name">ChallangeChapter6</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_buttonTxt">Register</string>
    <string name="hint_rep_pass">masukkan kembali password</string>
    <string name="hint_txt_pass">masukkan password</string>
    <string name="hint_txt_email">masukkan email</string>
    <string name="hint_txt_username">masukkan username</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="txt_button_masuk">Masuk</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="profile">Profile</string>
    <string name="username">username</string>
    <string name="nama_lengkap">nama lengkap</string>
    <string name="tanggal_lahir">tanggal lahir</string>
    <string name="alamat">alamat</string>
    <string name="update">update</string>
    <string name="logout">logOut</string>
</resources>