<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Login"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/masuk"
        android:textAlignment="center"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUsername"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:paddingBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_txt_username"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword"
        android:paddingBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtUsername"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_txt_pass"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/txtPassword"
        android:text="@string/txt_button_masuk" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_bpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_login"
        android:layout_marginStart="45dp"
        android:text="@string/belum_punya_akun"
        android:textSize="15sp" />


    <com.google.android.material.textview.MaterialTextView
        style="@style/UiText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_alignParentBottom="true"/>



</RelativeLayout>