<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.Profile">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/profile"
        android:textAlignment="center"
        android:textSize="30sp" />
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/my_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/txtProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtProfile" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/my_pic2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="85dp"
        android:layout_below="@id/txtProfile"
        android:layout_marginStart="40dp"
        android:layout_toEndOf="@id/my_pic"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUsername"
        android:layout_below="@+id/my_pic"
        android:layout_width="350dp"
        android:paddingBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtNamaLengkap"
        android:layout_below="@+id/txtUsername"
        android:layout_width="350dp"
        android:paddingBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nama_lengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_lengkap"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtTanggalLahir"
        android:layout_below="@+id/txtNamaLengkap"
        android:layout_width="350dp"
        android:paddingBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_tanggal_lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tanggal_lahir"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtALamat"
        android:layout_below="@+id/txtTanggalLahir"
        android:layout_width="350dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update"
        style="@style/button"
        android:layout_below="@+id/txtALamat"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/update" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        style="@style/button"
        android:layout_below="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/black"
        android:text="@string/logout"
        android:textSize="20sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appName"
        style="@style/UiText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/app_name" />
</RelativeLayout>